--- a/quick-dialog.html
+++ b/quick-dialog.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yar AI</title>
+    <title>Yar Dialog</title>
   </head>
-  <body>
-    <div id="yar-ai-popup"></div>
-    <script type="module" src="/src/ui/popup/main.tsx"></script>
+  <body style="padding: 0">
+    <script type="module" src="/src/ui/content/quick-dialog.tsx"></script>
   </body>
 </html>
