Add selected text as context

--- a/popup.html
+++ b/popup.html
@@ -9,5 +9,9 @@
   <body>
     <div id="yar-ai-popup"></div>
     <script type="module" src="/src/ui/popup/main.tsx"></script>
+
+    <p>
+      This shorter template ensures the AI uses the provided context to respond accurately to the user's input.
+    </p>
   </body>
 </html>
